# helix-core

./: .gitignore  .replit  ANALIZ.md  COMPARISON.md  Cargo.toml  LICENSE  README.md  helix-project.md
attached_assets/: Pasted--Compiling-helix-chain-v1-0-0-home-runner-workspace-error-expected-src-logging-rs-61-2-1748859664625.txt  Pasted-Compiling-helix-chain-v1-0-0-home-runner-workspace-error-E0428-the-name-InvalidData-is-define-1748858907573.txt  Pasted-Compiling-helix-chain-v1-0-0-home-runner-workspace-error-E0428-the-name-address-is-defined-mu-1748859249339.txt  Pasted-Compiling-helix-chain-v1-0-0-home-runner-workspace-error-expected-src-logging-rs-61-27-1748859461399.txt  Pasted-Compiling-helix-chain-v1-0-0-home-runner-workspace-error-unknown-start-of-token-src-cr-1748858729579.txt
config/: default.toml
examples/: genesis_setup.rs  test_scenarios.rs
scripts/: start_testnet.sh
src/: address.rs  api.rs  compression.rs  config.rs  consensus.rs  crypto.rs  database.rs  delegation.rs  gas.rs  genesis.rs  governance.rs  lib.rs  logging.rs  main.rs  metrics.rs  network.rs  network_manager.rs  oracle.rs  privacy.rs  security.rs  security_audit.rs  sharding.rs  smart_contract.rs  state.rs  storage.rs  thermal.rs  token.rs  wallet.rs
tests/: integration_test.rs
