[package]
name = "helix-chain"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
ripemd = "0.1"
secp256k1 = { version = "0.28", features = ["rand", "std"] }
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
aes-gcm = "0.10"
curve25519-dalek = { version = "4.1", features = ["serde"] }
zeroize = "1.7"
subtle = "2.5"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
libp2p = "0.53"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
base58 = "0.2"
hmac = "0.12"
pbkdf2 = "0.12"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
bytes = "1.5"
futures-util = "0.3"
pin-project = "1.1"
tokio-util = { version = "0.7", features = ["codec"] }
sysinfo = "0.29"
flate2 = "1.0"
config = "0.13"
futures = "0.3"
rusqlite = { version = "0.30", features = ["bundled"] }
tower-service = "0.3"
tower-layer = "0.3"
tower-load = "0.3"
tower-buffer = "0.3"
tower-timeout = "0.3"
tower-retry = "0.3"
tower-limit = "0.3"
tower-balance = "0.3"
tower-discover = "0.3"
tower-util = "0.3"
bellman = { git = "https://github.com/zkcrypto/bellman", branch = "main" }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
h2 = "0.3"
wasmer = "2.3.0"
wasmer-compiler = "2.3.0"
wasmer-compiler-cranelift = "2.3.0"
wasmer-engine-universal = "2.3.0"
wasmer-types = "2.3.0"
wasmparser = "0.100"
wasm-encoder = "0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wat = "1.0"
parity-wasm = "0.42"
wasm-opt = "0.116.1"
wasm-pack = "0.12"
wasm-bindgen-test = "0.3"
quick-xml = "0.31"
csv = "1.3"
url = "2.5"
http = "1.0"
# Remove problematic OpenSSL dependencies
# reqwest = { version = "0.11", features = ["json"] }
rustls = "0.21"
rustls-pemfile = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
test-case = "3.3"
criterion = "0.5"
tempfile = "3.8"
wiremock = "0.5"

[features]
default = ["rustls-tls"]
rustls-tls = []