[package]
name = "helix-chain"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
ripemd = "0.1"
secp256k1 = { version = "0.28", features = ["rand-std", "recovery"] }
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
aes-gcm = "0.10"
curve25519-dalek = { version = "4.1", features = ["serde"] }
zeroize = "1.7"
subtle = "2.5"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
libp2p = "0.53"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
base58 = "0.2"
hmac = "0.12"
pbkdf2 = "0.12"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
bytes = "1.5"
futures-util = "0.3"
pin-project = "1.1"
tokio-util = { version = "0.7", features = ["codec"] }
sysinfo = "0.29"
flate2 = "1.0"
config = "0.13"
futures = "0.3"
rusqlite = { version = "0.30", features = ["bundled"] }
tower-service = "0.3"
tower-layer = "0.3"
tower-load = "0.3"
tower-buffer = "0.3"
tower-timeout = "0.3"
tower-retry = "0.3"
tower-limit = "0.3"
tower-balance = "0.3"
tower-discover = "0.3"
tower-util = "0.3"
quick-xml = "0.31"
csv = "1.3"
url = "2.5"
http = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.21"
rustls-pemfile = "1.0"
prometheus = "0.13"
toml = "0.8"
tracing-appender = "0.2"
ipfs-api-backend-hyper = "0.6"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
log = "0.4"
bulletproofs = "4.0"
merlin = "3.0"
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
test-case = "3.3"
criterion = "0.5"
tempfile = "3.8"
wiremock = "0.5"

[features]
default = ["rustls-tls"]
rustls-tls = []