[package]
name = "helix-chain"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha3 = "0.10"
sha2 = "0.10"
blake2 = "0.10"
ripemd = "0.1"
hex = "0.4"
rand = "0.8"
secp256k1 = { version = "0.29", features = ["rand-std", "recovery"] }
ed25519-dalek = "2.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower-service = "0.3"
tower-layer = "0.3"
tower-load = "0.3"
tower-buffer = "0.3"
tower-timeout = "0.3"
tower-retry = "0.3"
tower-limit = "0.3"
tower-balance = "0.3"
tower-discover = "0.3"
tower-util = "0.3"
prometheus = "0.13"
metrics = "0.24"
metrics-exporter-prometheus = "0.15"
toml = "0.8"
bulletproofs = "4.0"
curve25519-dalek = { version = "4.0", features = ["serde", "rand_core"] }
curve25519-dalek-ng = "4.1.1"
merlin = "3.0"
bincode = "1.3"
lz4 = "1.24"
flate2 = "1.0"
rocksdb = "0.22"
ipfs-api-backend-hyper = "0.6"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
wasmtime = "20.0"
libp2p = "0.53"
async-trait = "0.1"
wasm-bindgen = "0.2"
zeroize = "1.7"
subtle = "2.5"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
base58 = "0.2"
hmac = "0.12"
pbkdf2 = "0.12"
x25519-dalek = "2.0"
bytes = "1.5"
futures-util = "0.3"
futures = "0.3"
pin-project = "1.1"
tokio-util = { version = "0.7", features = ["codec"] }
sysinfo = "0.29"
config = "0.13"
rusqlite = { version = "0.30", features = ["bundled"] }
quick-xml = "0.31"
csv = "1.3"
url = "2.5"
http = "0.2"
rustls = "0.21"
rustls-pemfile = "1.0"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
test-case = "3.3"
criterion = "0.5"
tempfile = "3.8"
wiremock = "0.5"

[features]
default = ["rustls-tls"]
rustls-tls = []